--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.79.5",
     "react-native-edge-to-edge": "1.6.0",
     "react-native-gesture-handler": "2.24.0",
+    "react-native-keyboard-controller": "^1.18.5",
     "react-native-nitro-modules": "^0.28.1",
     "react-native-reanimated": "3.17.4",
     "react-native-safe-area-context": "5.4.0",
