Added slider and highly improved app

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,7 +88,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.anonymous.myapp'
+    namespace 'pw.bloom.app'
     defaultConfig {
         externalNativeBuild {
             cmake {
@@ -100,7 +100,7 @@ android {
                 "-DCMAKE_OBJECT_PATH_MAX=1024"
             }
         }
-        applicationId 'com.anonymous.myapp'
+        applicationId 'pw.bloom.app'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
