--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@d11/react-native-fast-image": "^8.11.1",
     "@legendapp/list": "^1.1.4",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/babel-preset": "^0.81.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/elements": "^2.6.3",
@@ -34,6 +35,7 @@
     "react-native-keychain": "^10.0.0",
     "react-native-mmkv": "^3.3.0",
     "react-native-nitro-modules": "^0.28.1",
+    "react-native-pager-view": "^6.9.1",
     "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "3.17.4",
     "react-native-safe-area-context": "5.4.0",
