--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@shopify/flash-list": "1.7.6",
+    "axios": "^1.11.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^13.2.3",
     "expo": "~53.0.22",
