--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@craftzdog/react-native-buffer": "^6.1.0",
     "@d11/react-native-fast-image": "^8.11.1",
     "@legendapp/list": "^1.1.4",
+    "@noble/ciphers": "^2.0.0",
+    "@noble/ed25519": "^3.0.0",
+    "@noble/hashes": "^2.0.0",
+    "@noble/post-quantum": "^0.5.1",
+    "@noble/secp256k1": "^3.0.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/babel-preset": "^0.81.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
@@ -21,6 +27,7 @@
     "axios": "^1.11.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^13.2.3",
+    "crypto-browserify": "^3.12.1",
     "expo": "~53.0.22",
     "expo-blur": "^14.1.5",
     "expo-linear-gradient": "^14.1.5",
@@ -30,13 +37,16 @@
     "install": "^0.13.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-aes-gcm-crypto": "^0.2.2",
     "react-native-edge-to-edge": "1.6.0",
     "react-native-gesture-handler": "2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-controller": "^1.18.5",
     "react-native-keychain": "^10.0.0",
     "react-native-mmkv": "^3.3.0",
     "react-native-nitro-modules": "^0.28.1",
     "react-native-pager-view": "^6.9.1",
+    "react-native-quick-base64": "^2.2.2",
     "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "3.17.4",
     "react-native-safe-area-context": "5.4.0",
