--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
         "@assets/*": ["assets/*"],
         "@hooks/*": ["src/hooks/*"],
         "@screens/*": ["src/screens/*"],
-        "@lib/*": ["src/lib/*"]
+        "@lib/*": ["src/lib/*"],
+        "@providers/*": ["src/providers/*"]
       }
     }
   }
