--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-native-keyboard-controller": "^1.18.5",
     "react-native-keychain": "^10.0.0",
     "react-native-mmkv": "^3.3.0",
+    "react-native-nitro-image": "^0.6.1",
     "react-native-nitro-modules": "^0.28.1",
+    "react-native-nitro-web-image": "^0.6.1",
     "react-native-pager-view": "^6.9.1",
     "react-native-quick-base64": "^2.2.2",
     "react-native-quick-crypto": "^0.7.17",
