--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-screens": "4.11.1",
     "react-native-svg": "^15.12.1",
     "react-native-unistyles": "^3.0.10",
+    "realm": "^20.2.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
