--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 			"@hooks/*": ["src/hooks/*"],
 			"@screens/*": ["src/screens/*"],
 			"@lib/*": ["src/lib/*"],
-			"@providers/*": ["src/providers/*"]
+			"@providers/*": ["src/providers/*"],
+			"@interfaces": ["src/interfaces/index"]
 		}
 	},
 	"include": ["src", "App.ts", "App.tsx", "App.js", "App.jsx"],
