--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,10 @@
   "editor.defaultFormatter": "biomejs.biome",
 
   "[typescript]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "[javascript]": {
     "editor.defaultFormatter": "biomejs.biome"
