--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo": "~54.0.30",
     "expo-asset": "^12.0.12",
     "expo-blur": "^15.0.8",
+    "expo-build-properties": "^1.0.10",
     "expo-font": "^14.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "^8.0.11",
