--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "install": "^0.13.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-device-info": "^15.0.2",
     "react-native-easing-gradient": "^1.1.1",
     "react-native-edge-to-edge": "1.7.0",
     "react-native-gesture-handler": "2.30.0",
